main/loop_unroll/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> multiple_statements
Rule 2     multiple_statements -> multiple_statements statement
Rule 3     multiple_statements -> statement
Rule 4     statement -> open
Rule 5     statement -> closed
Rule 6     open -> IF condition statement
Rule 7     open -> IF condition closed ELSE open
Rule 8     open -> WHILE condition open
Rule 9     open -> FOR for_condition open
Rule 10    closed -> simple
Rule 11    closed -> block
Rule 12    closed -> IF condition closed ELSE closed
Rule 13    closed -> WHILE condition closed
Rule 14    closed -> FOR for_condition closed
Rule 15    condition -> L_PAREN expr R_PAREN
Rule 16    for_condition -> L_PAREN declaration expr SEMICOLON expr R_PAREN
Rule 17    multi_declaration -> multi_declaration ID COMMA
Rule 18    multi_declaration -> multi_declaration ID ASSIGN expr COMMA
Rule 19    multi_declaration -> ID COMMA
Rule 20    multi_declaration -> ID ASSIGN expr COMMA
Rule 21    stop -> ID SEMICOLON
Rule 22    stop -> ID ASSIGN expr SEMICOLON
Rule 23    declaration -> TYPE ID SEMICOLON
Rule 24    declaration -> TYPE ID ASSIGN expr SEMICOLON
Rule 25    declaration -> TYPE multi_declaration stop
Rule 26    block -> L_FLOWBRACE multiple_statements R_FLOWBRACE
Rule 27    simple -> expr SEMICOLON
Rule 28    simple -> declaration
Rule 29    simple -> SEMICOLON
Rule 30    simple -> function
Rule 31    function -> TYPE ID L_PAREN R_PAREN function_2
Rule 32    function_2 -> SEMICOLON
Rule 33    function_2 -> block
Rule 34    expr -> expr assignment exprOR
Rule 35    expr -> exprOR
Rule 36    assignment -> ASSIGN
Rule 37    assignment -> PLUS_ASSIGN
Rule 38    assignment -> MINUS_ASSIGN
Rule 39    assignment -> MUL_ASSIGN
Rule 40    assignment -> DIV_ASSIGN
Rule 41    assignment -> AND_ASSIGN
Rule 42    assignment -> OR_ASSIGN
Rule 43    assignment -> XOR_ASSIGN
Rule 44    assignment -> MOD_ASSIGN
Rule 45    assignment -> L_SHIFT_ASSIGN
Rule 46    assignment -> R_SHIFT_ASSIGN
Rule 47    exprOR -> exprOR OR exprAND
Rule 48    exprOR -> exprAND
Rule 49    exprAND -> exprAND AND exprBITOR
Rule 50    exprAND -> exprBITOR
Rule 51    exprBITOR -> exprBITOR BIT_OR exprBITXOR
Rule 52    exprBITOR -> exprBITXOR
Rule 53    exprBITXOR -> exprBITXOR BIT_XOR exprBITAND
Rule 54    exprBITXOR -> exprBITAND
Rule 55    exprBITAND -> exprBITAND BIT_AND exprEQ
Rule 56    exprBITAND -> exprEQ
Rule 57    exprEQ -> exprEQ EQ exprRELOP
Rule 58    exprEQ -> exprEQ NE exprRELOP
Rule 59    exprEQ -> exprRELOP
Rule 60    exprRELOP -> exprRELOP relop exprSHIFT
Rule 61    exprRELOP -> exprSHIFT
Rule 62    relop -> LE
Rule 63    relop -> LT
Rule 64    relop -> GE
Rule 65    relop -> GT
Rule 66    exprSHIFT -> exprSHIFT L_SHIFT exprOP
Rule 67    exprSHIFT -> exprSHIFT R_SHIFT exprOP
Rule 68    exprSHIFT -> exprOP
Rule 69    exprOP -> exprOP PLUS term
Rule 70    exprOP -> exprOP MINUS term
Rule 71    exprOP -> term
Rule 72    term -> term MULTIPLY factor
Rule 73    term -> term DIVIDE factor
Rule 74    term -> term MOD factor
Rule 75    term -> factor
Rule 76    factor -> NOT factor
Rule 77    factor -> PLUS factor
Rule 78    factor -> MINUS factor
Rule 79    factor -> PLUS_PLUS factor
Rule 80    factor -> MINUS_MINUS factor
Rule 81    factor -> brace
Rule 82    brace -> L_PAREN expr R_PAREN
Rule 83    brace -> brace PLUS_PLUS
Rule 84    brace -> brace MINUS_MINUS
Rule 85    brace -> INT_NUM
Rule 86    brace -> FLOAT_NUM
Rule 87    brace -> ID

Terminals, with rules where they appear

AND                  : 49
AND_ASSIGN           : 41
ASSIGN               : 18 20 22 24 36
BIT_AND              : 55
BIT_OR               : 51
BIT_XOR              : 53
COMMA                : 17 18 19 20
DIVIDE               : 73
DIV_ASSIGN           : 40
ELSE                 : 7 12
EQ                   : 57
FLOAT_NUM            : 86
FOR                  : 9 14
GE                   : 64
GT                   : 65
ID                   : 17 18 19 20 21 22 23 24 31 87
IF                   : 6 7 12
INT_NUM              : 85
LE                   : 62
LT                   : 63
L_FLOWBRACE          : 26
L_PAREN              : 15 16 31 82
L_SHIFT              : 66
L_SHIFT_ASSIGN       : 45
MINUS                : 70 78
MINUS_ASSIGN         : 38
MINUS_MINUS          : 80 84
MOD                  : 74
MOD_ASSIGN           : 44
MULTIPLY             : 72
MUL_ASSIGN           : 39
NE                   : 58
NOT                  : 76
OR                   : 47
OR_ASSIGN            : 42
PLUS                 : 69 77
PLUS_ASSIGN          : 37
PLUS_PLUS            : 79 83
R_FLOWBRACE          : 26
R_PAREN              : 15 16 31 82
R_SHIFT              : 67
R_SHIFT_ASSIGN       : 46
SEMICOLON            : 16 21 22 23 24 27 29 32
TYPE                 : 23 24 25 31
WHILE                : 8 13
XOR_ASSIGN           : 43
error                : 

Nonterminals, with rules where they appear

assignment           : 34
block                : 11 33
brace                : 81 83 84
closed               : 5 7 12 12 13 14
condition            : 6 7 8 12 13
declaration          : 16 28
expr                 : 15 16 16 18 20 22 24 27 34 82
exprAND              : 47 48 49
exprBITAND           : 53 54 55
exprBITOR            : 49 50 51
exprBITXOR           : 51 52 53
exprEQ               : 55 56 57 58
exprOP               : 66 67 68 69 70
exprOR               : 34 35 47
exprRELOP            : 57 58 59 60
exprSHIFT            : 60 61 66 67
factor               : 72 73 74 75 76 77 78 79 80
for_condition        : 9 14
function             : 30
function_2           : 31
multi_declaration    : 17 18 25
multiple_statements  : 1 2 26
open                 : 4 7 8 9
relop                : 60
simple               : 10
start                : 0
statement            : 2 3 6
stop                 : 25
term                 : 69 70 71 72 73 74

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . multiple_statements
    (2) multiple_statements -> . multiple_statements statement
    (3) multiple_statements -> . statement
    (4) statement -> . open
    (5) statement -> . closed
    (6) open -> . IF condition statement
    (7) open -> . IF condition closed ELSE open
    (8) open -> . WHILE condition open
    (9) open -> . FOR for_condition open
    (10) closed -> . simple
    (11) closed -> . block
    (12) closed -> . IF condition closed ELSE closed
    (13) closed -> . WHILE condition closed
    (14) closed -> . FOR for_condition closed
    (27) simple -> . expr SEMICOLON
    (28) simple -> . declaration
    (29) simple -> . SEMICOLON
    (30) simple -> . function
    (26) block -> . L_FLOWBRACE multiple_statements R_FLOWBRACE
    (34) expr -> . expr assignment exprOR
    (35) expr -> . exprOR
    (23) declaration -> . TYPE ID SEMICOLON
    (24) declaration -> . TYPE ID ASSIGN expr SEMICOLON
    (25) declaration -> . TYPE multi_declaration stop
    (31) function -> . TYPE ID L_PAREN R_PAREN function_2
    (47) exprOR -> . exprOR OR exprAND
    (48) exprOR -> . exprAND
    (49) exprAND -> . exprAND AND exprBITOR
    (50) exprAND -> . exprBITOR
    (51) exprBITOR -> . exprBITOR BIT_OR exprBITXOR
    (52) exprBITOR -> . exprBITXOR
    (53) exprBITXOR -> . exprBITXOR BIT_XOR exprBITAND
    (54) exprBITXOR -> . exprBITAND
    (55) exprBITAND -> . exprBITAND BIT_AND exprEQ
    (56) exprBITAND -> . exprEQ
    (57) exprEQ -> . exprEQ EQ exprRELOP
    (58) exprEQ -> . exprEQ NE exprRELOP
    (59) exprEQ -> . exprRELOP
    (60) exprRELOP -> . exprRELOP relop exprSHIFT
    (61) exprRELOP -> . exprSHIFT
    (66) exprSHIFT -> . exprSHIFT L_SHIFT exprOP
    (67) exprSHIFT -> . exprSHIFT R_SHIFT exprOP
    (68) exprSHIFT -> . exprOP
    (69) exprOP -> . exprOP PLUS term
    (70) exprOP -> . exprOP MINUS term
    (71) exprOP -> . term
    (72) term -> . term MULTIPLY factor
    (73) term -> . term DIVIDE factor
    (74) term -> . term MOD factor
    (75) term -> . factor
    (76) factor -> . NOT factor
    (77) factor -> . PLUS factor
    (78) factor -> . MINUS factor
    (79) factor -> . PLUS_PLUS factor
    (80) factor -> . MINUS_MINUS factor
    (81) factor -> . brace
    (82) brace -> . L_PAREN expr R_PAREN
    (83) brace -> . brace PLUS_PLUS
    (84) brace -> . brace MINUS_MINUS
    (85) brace -> . INT_NUM
    (86) brace -> . FLOAT_NUM
    (87) brace -> . ID

    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    SEMICOLON       shift and go to state 12
    L_FLOWBRACE     shift and go to state 15
    TYPE            shift and go to state 17
    NOT             shift and go to state 32
    PLUS            shift and go to state 28
    MINUS           shift and go to state 30
    PLUS_PLUS       shift and go to state 33
    MINUS_MINUS     shift and go to state 34
    L_PAREN         shift and go to state 19
    INT_NUM         shift and go to state 36
    FLOAT_NUM       shift and go to state 37
    ID              shift and go to state 18

    start                          shift and go to state 1
    multiple_statements            shift and go to state 2
    statement                      shift and go to state 3
    open                           shift and go to state 4
    closed                         shift and go to state 5
    simple                         shift and go to state 9
    block                          shift and go to state 10
    expr                           shift and go to state 11
    declaration                    shift and go to state 13
    function                       shift and go to state 14
    exprOR                         shift and go to state 16
    exprAND                        shift and go to state 20
    exprBITOR                      shift and go to state 21
    exprBITXOR                     shift and go to state 22
    exprBITAND                     shift and go to state 23
    exprEQ                         shift and go to state 24
    exprRELOP                      shift and go to state 25
    exprSHIFT                      shift and go to state 26
    exprOP                         shift and go to state 27
    term                           shift and go to state 29
    factor                         shift and go to state 31
    brace                          shift and go to state 35

state 1

    (0) S' -> start .



state 2

    (1) start -> multiple_statements .
    (2) multiple_statements -> multiple_statements . statement
    (4) statement -> . open
    (5) statement -> . closed
    (6) open -> . IF condition statement
    (7) open -> . IF condition closed ELSE open
    (8) open -> . WHILE condition open
    (9) open -> . FOR for_condition open
    (10) closed -> . simple
    (11) closed -> . block
    (12) closed -> . IF condition closed ELSE closed
    (13) closed -> . WHILE condition closed
    (14) closed -> . FOR for_condition closed
    (27) simple -> . expr SEMICOLON
    (28) simple -> . declaration
    (29) simple -> . SEMICOLON
    (30) simple -> . function
    (26) block -> . L_FLOWBRACE multiple_statements R_FLOWBRACE
    (34) expr -> . expr assignment exprOR
    (35) expr -> . exprOR
    (23) declaration -> . TYPE ID SEMICOLON
    (24) declaration -> . TYPE ID ASSIGN expr SEMICOLON
    (25) declaration -> . TYPE multi_declaration stop
    (31) function -> . TYPE ID L_PAREN R_PAREN function_2
    (47) exprOR -> . exprOR OR exprAND
    (48) exprOR -> . exprAND
    (49) exprAND -> . exprAND AND exprBITOR
    (50) exprAND -> . exprBITOR
    (51) exprBITOR -> . exprBITOR BIT_OR exprBITXOR
    (52) exprBITOR -> . exprBITXOR
    (53) exprBITXOR -> . exprBITXOR BIT_XOR exprBITAND
    (54) exprBITXOR -> . exprBITAND
    (55) exprBITAND -> . exprBITAND BIT_AND exprEQ
    (56) exprBITAND -> . exprEQ
    (57) exprEQ -> . exprEQ EQ exprRELOP
    (58) exprEQ -> . exprEQ NE exprRELOP
    (59) exprEQ -> . exprRELOP
    (60) exprRELOP -> . exprRELOP relop exprSHIFT
    (61) exprRELOP -> . exprSHIFT
    (66) exprSHIFT -> . exprSHIFT L_SHIFT exprOP
    (67) exprSHIFT -> . exprSHIFT R_SHIFT exprOP
    (68) exprSHIFT -> . exprOP
    (69) exprOP -> . exprOP PLUS term
    (70) exprOP -> . exprOP MINUS term
    (71) exprOP -> . term
    (72) term -> . term MULTIPLY factor
    (73) term -> . term DIVIDE factor
    (74) term -> . term MOD factor
    (75) term -> . factor
    (76) factor -> . NOT factor
    (77) factor -> . PLUS factor
    (78) factor -> . MINUS factor
    (79) factor -> . PLUS_PLUS factor
    (80) factor -> . MINUS_MINUS factor
    (81) factor -> . brace
    (82) brace -> . L_PAREN expr R_PAREN
    (83) brace -> . brace PLUS_PLUS
    (84) brace -> . brace MINUS_MINUS
    (85) brace -> . INT_NUM
    (86) brace -> . FLOAT_NUM
    (87) brace -> . ID

    $end            reduce using rule 1 (start -> multiple_statements .)
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    SEMICOLON       shift and go to state 12
    L_FLOWBRACE     shift and go to state 15
    TYPE            shift and go to state 17
    NOT             shift and go to state 32
    PLUS            shift and go to state 28
    MINUS           shift and go to state 30
    PLUS_PLUS       shift and go to state 33
    MINUS_MINUS     shift and go to state 34
    L_PAREN         shift and go to state 19
    INT_NUM         shift and go to state 36
    FLOAT_NUM       shift and go to state 37
    ID              shift and go to state 18

    statement                      shift and go to state 38
    open                           shift and go to state 4
    closed                         shift and go to state 5
    simple                         shift and go to state 9
    block                          shift and go to state 10
    expr                           shift and go to state 11
    declaration                    shift and go to state 13
    function                       shift and go to state 14
    exprOR                         shift and go to state 16
    exprAND                        shift and go to state 20
    exprBITOR                      shift and go to state 21
    exprBITXOR                     shift and go to state 22
    exprBITAND                     shift and go to state 23
    exprEQ                         shift and go to state 24
    exprRELOP                      shift and go to state 25
    exprSHIFT                      shift and go to state 26
    exprOP                         shift and go to state 27
    term                           shift and go to state 29
    factor                         shift and go to state 31
    brace                          shift and go to state 35

state 3

    (3) multiple_statements -> statement .

    IF              reduce using rule 3 (multiple_statements -> statement .)
    WHILE           reduce using rule 3 (multiple_statements -> statement .)
    FOR             reduce using rule 3 (multiple_statements -> statement .)
    SEMICOLON       reduce using rule 3 (multiple_statements -> statement .)
    L_FLOWBRACE     reduce using rule 3 (multiple_statements -> statement .)
    TYPE            reduce using rule 3 (multiple_statements -> statement .)
    NOT             reduce using rule 3 (multiple_statements -> statement .)
    PLUS            reduce using rule 3 (multiple_statements -> statement .)
    MINUS           reduce using rule 3 (multiple_statements -> statement .)
    PLUS_PLUS       reduce using rule 3 (multiple_statements -> statement .)
    MINUS_MINUS     reduce using rule 3 (multiple_statements -> statement .)
    L_PAREN         reduce using rule 3 (multiple_statements -> statement .)
    INT_NUM         reduce using rule 3 (multiple_statements -> statement .)
    FLOAT_NUM       reduce using rule 3 (multiple_statements -> statement .)
    ID              reduce using rule 3 (multiple_statements -> statement .)
    $end            reduce using rule 3 (multiple_statements -> statement .)
    R_FLOWBRACE     reduce using rule 3 (multiple_statements -> statement .)


state 4

    (4) statement -> open .

    IF              reduce using rule 4 (statement -> open .)
    WHILE           reduce using rule 4 (statement -> open .)
    FOR             reduce using rule 4 (statement -> open .)
    SEMICOLON       reduce using rule 4 (statement -> open .)
    L_FLOWBRACE     reduce using rule 4 (statement -> open .)
    TYPE            reduce using rule 4 (statement -> open .)
    NOT             reduce using rule 4 (statement -> open .)
    PLUS            reduce using rule 4 (statement -> open .)
    MINUS           reduce using rule 4 (statement -> open .)
    PLUS_PLUS       reduce using rule 4 (statement -> open .)
    MINUS_MINUS     reduce using rule 4 (statement -> open .)
    L_PAREN         reduce using rule 4 (statement -> open .)
    INT_NUM         reduce using rule 4 (statement -> open .)
    FLOAT_NUM       reduce using rule 4 (statement -> open .)
    ID              reduce using rule 4 (statement -> open .)
    $end            reduce using rule 4 (statement -> open .)
    R_FLOWBRACE     reduce using rule 4 (statement -> open .)


state 5

    (5) statement -> closed .

    IF              reduce using rule 5 (statement -> closed .)
    WHILE           reduce using rule 5 (statement -> closed .)
    FOR             reduce using rule 5 (statement -> closed .)
    SEMICOLON       reduce using rule 5 (statement -> closed .)
    L_FLOWBRACE     reduce using rule 5 (statement -> closed .)
    TYPE            reduce using rule 5 (statement -> closed .)
    NOT             reduce using rule 5 (statement -> closed .)
    PLUS            reduce using rule 5 (statement -> closed .)
    MINUS           reduce using rule 5 (statement -> closed .)
    PLUS_PLUS       reduce using rule 5 (statement -> closed .)
    MINUS_MINUS     reduce using rule 5 (statement -> closed .)
    L_PAREN         reduce using rule 5 (statement -> closed .)
    INT_NUM         reduce using rule 5 (statement -> closed .)
    FLOAT_NUM       reduce using rule 5 (statement -> closed .)
    ID              reduce using rule 5 (statement -> closed .)
    $end            reduce using rule 5 (statement -> closed .)
    R_FLOWBRACE     reduce using rule 5 (statement -> closed .)


state 6

    (6) open -> IF . condition statement
    (7) open -> IF . condition closed ELSE open
    (12) closed -> IF . condition closed ELSE closed
    (15) condition -> . L_PAREN expr R_PAREN

    L_PAREN         shift and go to state 40

    condition                      shift and go to state 39

state 7

    (8) open -> WHILE . condition open
    (13) closed -> WHILE . condition closed
    (15) condition -> . L_PAREN expr R_PAREN

    L_PAREN         shift and go to state 40

    condition                      shift and go to state 41

state 8

    (9) open -> FOR . for_condition open
    (14) closed -> FOR . for_condition closed
    (16) for_condition -> . L_PAREN declaration expr SEMICOLON expr R_PAREN

    L_PAREN         shift and go to state 43

    for_condition                  shift and go to state 42

state 9

    (10) closed -> simple .

    IF              reduce using rule 10 (closed -> simple .)
    WHILE           reduce using rule 10 (closed -> simple .)
    FOR             reduce using rule 10 (closed -> simple .)
    SEMICOLON       reduce using rule 10 (closed -> simple .)
    L_FLOWBRACE     reduce using rule 10 (closed -> simple .)
    TYPE            reduce using rule 10 (closed -> simple .)
    NOT             reduce using rule 10 (closed -> simple .)
    PLUS            reduce using rule 10 (closed -> simple .)
    MINUS           reduce using rule 10 (closed -> simple .)
    PLUS_PLUS       reduce using rule 10 (closed -> simple .)
    MINUS_MINUS     reduce using rule 10 (closed -> simple .)
    L_PAREN         reduce using rule 10 (closed -> simple .)
    INT_NUM         reduce using rule 10 (closed -> simple .)
    FLOAT_NUM       reduce using rule 10 (closed -> simple .)
    ID              reduce using rule 10 (closed -> simple .)
    $end            reduce using rule 10 (closed -> simple .)
    R_FLOWBRACE     reduce using rule 10 (closed -> simple .)
    ELSE            reduce using rule 10 (closed -> simple .)


state 10

    (11) closed -> block .

    IF              reduce using rule 11 (closed -> block .)
    WHILE           reduce using rule 11 (closed -> block .)
    FOR             reduce using rule 11 (closed -> block .)
    SEMICOLON       reduce using rule 11 (closed -> block .)
    L_FLOWBRACE     reduce using rule 11 (closed -> block .)
    TYPE            reduce using rule 11 (closed -> block .)
    NOT             reduce using rule 11 (closed -> block .)
    PLUS            reduce using rule 11 (closed -> block .)
    MINUS           reduce using rule 11 (closed -> block .)
    PLUS_PLUS       reduce using rule 11 (closed -> block .)
    MINUS_MINUS     reduce using rule 11 (closed -> block .)
    L_PAREN         reduce using rule 11 (closed -> block .)
    INT_NUM         reduce using rule 11 (closed -> block .)
    FLOAT_NUM       reduce using rule 11 (closed -> block .)
    ID              reduce using rule 11 (closed -> block .)
    $end            reduce using rule 11 (closed -> block .)
    R_FLOWBRACE     reduce using rule 11 (closed -> block .)
    ELSE            reduce using rule 11 (closed -> block .)


state 11

    (27) simple -> expr . SEMICOLON
    (34) expr -> expr . assignment exprOR
    (36) assignment -> . ASSIGN
    (37) assignment -> . PLUS_ASSIGN
    (38) assignment -> . MINUS_ASSIGN
    (39) assignment -> . MUL_ASSIGN
    (40) assignment -> . DIV_ASSIGN
    (41) assignment -> . AND_ASSIGN
    (42) assignment -> . OR_ASSIGN
    (43) assignment -> . XOR_ASSIGN
    (44) assignment -> . MOD_ASSIGN
    (45) assignment -> . L_SHIFT_ASSIGN
    (46) assignment -> . R_SHIFT_ASSIGN

    SEMICOLON       shift and go to state 44
    ASSIGN          shift and go to state 46
    PLUS_ASSIGN     shift and go to state 47
    MINUS_ASSIGN    shift and go to state 48
    MUL_ASSIGN      shift and go to state 49
    DIV_ASSIGN      shift and go to state 50
    AND_ASSIGN      shift and go to state 51
    OR_ASSIGN       shift and go to state 52
    XOR_ASSIGN      shift and go to state 53
    MOD_ASSIGN      shift and go to state 54
    L_SHIFT_ASSIGN  shift and go to state 55
    R_SHIFT_ASSIGN  shift and go to state 56

    assignment                     shift and go to state 45

state 12

    (29) simple -> SEMICOLON .
